@@ -31,6 +31,7 @@
   + New DrawRectangle/BeginDrawRectangle/EndDrawRectangle/DrawRectangleAsync methods
   + New FillRectangle/BeginFillRectangle/EndFillRectangle/FillRectangleAsync methods
   + New DrawEllipse/BeginDrawEllipse/EndDrawEllipse/DrawEllipseAsync methods
+  + New FillEllipse/BeginFillEllipse/EndFillEllipse/FillEllipseAsync methods
 
 + New KGySoft.Drawing.Shapes namespace
 ======================================
